# ESD-i-want-to-break-free

./: .travis.yml  CMakeLists.txt  GRADING.md  README.md  main.cpp
CMake/: compilation.cmake
GameData/Levels/: lvl_1.txt  lvl_2.txt  lvl_3.txt  lvl_4.txt  lvl_5.txt  lvl_6.txt
Libs/ASGE/: LICENSE  README.md
Libs/ASGE/include/Engine/: Colours.h  DebugPrinter.h  Doxygen.h  FileIO.h  Font.h  Game.h  GameTime.h  Gamepad.h  Input.h  InputEvents.h  KeyIndex.h  Keys.h  Locator.h  Mouse.h  NonCopyable.h  OGLGame.h  Platform.h  Point2D.h  Renderer.h  Shader.h  Sprite.h  SpriteBounds.h  Texture.h  Value.h
Source/: Game.cpp  Game.h  main.cpp
Source/Components/: GameObject.cpp  GameObject.h  MovementComponent.cpp  MovementComponent.h  SpriteComponent.cpp  SpriteComponent.h
Source/GameObjects/: Ball.cpp  Ball.h  Player.cpp  Player.h
Source/Handlers/: CollisionHandler.cpp  CollisionHandler.h  UIHandler.cpp  UIHandler.h
Source/LevelData/: GameConstants.h  Level.cpp  Level.h
Source/Utility/: Circle.cpp  Circle.h  Rect.cpp  Rectangle.cpp  Rectangle.h  Vector2.cpp  Vector2.h
